Fix nav spacing

--- a/_sass/nav.scss
+++ b/_sass/nav.scss
@@ -21,28 +21,32 @@ nav {
     transition: opacity 0.2s;
   }
 
-  .links {
+  .links-wrapper {
     @include cover;
     height: 90%;
     top: 0;
-    padding: 3.5rem;;
+    padding: 3.5rem;
 
-    display: none;
+    overflow-y: scroll;
 
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-around;
-
-    .nav-item {
-      opacity: 0;
+    .links {
 
       display: flex;
-      flex-direction: column;
-      align-items: center;
 
-      .group {
+      flex-direction: column;
+      align-content: flex-start;
+
+      .nav-item {
+        opacity: 0;
+
         display: flex;
         flex-direction: column;
+        align-items: center;
+
+        .group {
+          display: flex;
+          flex-direction: column;
+        }
       }
     }
   }
